--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	<body>
 		<div id="wrapper">
 
-			<a id="linkBtn" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=\"'+this.href+'\"/>');});$('div,table').remove()},1200);void(0);" title="ListFixImg">ListingFix</a> 
+			<a id="linkBtn" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=%22'+this.href+'%22/>');});$('div,table').remove()},1200);void(0);" title="ListFixImg">ListingFix</a> 
 
-			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=\"'+this.href+'\"/>');});$('div,table').remove()},1200);void(0);">Drag this bookmarklet to your bookmarks bar or a tab</a></p>
+			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=%22'+this.href+'%22/>');});$('div,table').remove()},1200);void(0);">Drag this bookmarklet to your bookmarks bar or a tab</a></p>
 
 <!--[if IE]>
 <p class="ie-version">Right click the green button and choose "Add to favorites" (yes, it's safe).</p>
