--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				width: 498px;
 				height: 176px;
 				margin: 0 auto;
-				background: url(button.png) no-repeat;
-				text-indent: -99999px;
+				/*background: url(button.png) no-repeat;*/
+				/*text-indent: -99999px;*/
 				overflow: hidden;
 			}
 
