Fix link to github

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div id="footer"> 
 
 			<p> Alpha ver: Kurt Davis -- kewtec, inc.</p>
-			<p>Source at: <a href="https://github.com/kurtdavis/fmlslistings">https://github.com/kurtdavis/fmlslistings</a></p>
+			<p>Source at: <a href="https://github.com/kurtdavis/kurtdavis.github.com">github</a></p>
 	 <script type="text/javascript">
 		 var _gaq = _gaq || [];
 		 _gaq.push(['_setAccount', 'UA-29425619-1']);
