--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 			}
 
 			#linkBtn {
-				margin-top: -10px;
+				/*margin-top: -10px;*/
 				display: block;
 				width: 498px;
 				height: 176px;
 				margin: 0 auto;
+				text-align: center;
+				vertical-align: center;
 				/*background: url(button.png) no-repeat;*/
 				/*text-indent: -99999px;*/
 				overflow: hidden;
@@ -43,8 +45,9 @@
 
 			<a id="linkBtn" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=%22'+this.href+'%22/>');});$('div,table').remove()},1200);void(0);" title="ListFixImg">ListingFix</a> 
 
-			<p class="none-ie"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=%22'+this.href+'%22/>');});$('div,table').remove()},1200);void(0);">Drag this bookmarklet to your bookmarks bar or a tab</a></p>
-
+			<code>
+				javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src="'+this.href+'"/>');});$('div,table').remove()},1200);void(0);
+			</code> 
 <!--[if IE]>
 <p class="ie-version">Right click the green button and choose "Add to favorites" (yes, it's safe).</p>
 <![endif]-->
