More css hacks..

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 				font-size: .6em;
 			}
 
-			a { text-decoration: none; }
+			a {
+				text-decoration: none; 
+				color: #957;
+			}
 			a img { border: none; }
 
 			.wrapper {
