--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
 					<a href="https://github.com/kurtdavis/kurtdavis.github.com">GitHub</a>
 				</div></div>
 			<p>Drag this link into your bookmarks or right click and add it.</p>
+			<h4>Bootstrap toogle full width</h4>
+			<a id="fullBtn" href="javascript:(function()%7B$(%27.container, .container-full%27).toggleClass(%27container container-full%27)%3B%7D)()">Full</a>
+			<br />
+			<h4>ListingFix</h4>
 			<a id="linkBtn" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js';setTimeout(function(){$('img').closest('a').prependTo('body').each(function(){$('body').append('<img src=%22'+this.href+'%22/>');});$('div,table').remove()},1200);void(0);" title="ListFixImg">ListingFix</a> 
 			<aside>Refresh page if you accidentally click it. ;)</aside>
 
